admission/ValidatingAdmissionPolicy/policies/kyverno-not-enforcing/clusterpolicies/deny.yaml
# RequiresCRD: clusterpolicies.kyverno.io
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: violating-kyverno-clusterpolicy-not-enforcing
  annotations:
    kubeapt.io/uuid: "5a1658e9-655f-44ce-a2d3-7d4fb70857e2"
spec:
  validationFailureAction: Audit
  rules:
  - name: require-labels
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "label required"
      pattern:
        metadata:
          labels:
            app: "?*"
